[tool.poetry]
name = "pypkgs_524_ind1"
version = "0.1.0"
description = ""
authors = ["yzr96 <eric.yu@usask.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
